
[workspace]

members = ["src/wlan", "src/aux"]

[package]
name = "wifiStalker"
version = "0.1.0"
edition = "2021"

[dependencies]
pnet_datalink ="0.33.0"
libwifi = "0.3"
nix ={version="0.26",feature="ioctl"}
wlan = {path="src/wlan"}
aux = {path="src/aux"}
cli = {path = "src/cli"}
tui = "0.19.0"
crossterm = "0.26.0"
clap = { version = "4.1.13", features = ["derive"] }
