[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aux = {path ="../aux"}
concat-arrays = "0.1.2"
hex = "0.4.3"
hmac = "0.12.1"
pbkdf2 = {version = "0.12.1", features=["sha1"]}
sha1 = "0.10.5"
