[package]
name = "tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wlan = {path="../wlan"}
wpa = {path="../wpa"}
aux = {path="../aux"}
tui = "0.19.0"
crossterm = "0.26.0"
rand = "0.8.5"
lazy_static = "1.4.0"
libwifi = "0.3.1"
